--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
+@ -0,0 +1,74 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #8d53b7;
     background-color: #f4f4f4;
 }
 
 header {
     text-align: center;
     padding: 50px 0;
-    background: #333;
+    background: #cf8be8;
     color: white;
 }
 
@@ -24,7 +25,7 @@ header p {
 }
 
 nav {
-    background: #444;
+    background: #cf8be8;
     padding: 10px 0;
 }
 
