--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 header {
     text-align: center;
     padding: 50px 0;
-    background: #cf8be8;
+    background: #5e316f;
     color: white;
 }
 
@@ -25,7 +25,7 @@ header p {
 }
 
 nav {
-    background: #cf8be8;
+    background: #9360a6;
     padding: 10px 0;
 }
 
