--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
-@ -0,0 +1,74 @@
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #8d53b7;
+    color: #000000;
     background-color: #f4f4f4;
+}
+a {
+    color: #8d53b7;
+    text-decoration:none;
+    font-weight: bold;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 header {
@@ -64,7 +73,6 @@ main section h2 {
     padding-bottom: 5px;
 }
 
-
 .profile-container {
     display: flex;
     justify-content: center;
@@ -72,18 +80,9 @@ main section h2 {
 }
 
 .profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
+    width: 130px;  /* 调整尺寸 */
+    height: 130px; /* 调整尺寸 */
+    border-radius: 60%;  /* 使图片变圆 */
     object-fit: cover;
-    border: 4px solid #333;
-}
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background: #333;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    border: 4px solid #4a2f5b;
 }
